--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -45,6 +45,9 @@ a,
 button {
   cursor: pointer;
 }
+img {
+  object-fit: contain;
+}
 
 /* Sticky footer */
 #root {
